logs/incf.dai.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/incf'...
Listing './lib/python3.5/site-packages/incf/dai'...
Listing './lib/python3.5/site-packages/incf/dai/example_responses'...
Compiling './lib/python3.5/site-packages/incf/dai/hub.py'...
***   File "./lib/python3.5/site-packages/incf/dai/hub.py", line 154
    print "Requested URL:", url
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/incf/dai/response.py'...
***   File "./lib/python3.5/site-packages/incf/dai/response.py", line 67
    raise Exception, self.headers
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/incf/dai/utils.py'...
***   File "./lib/python3.5/site-packages/incf/dai/utils.py", line 15
    print "Hub '%s' not found in %s." % (name, list_hub_names())
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/incf.dai-0.7.egg-info'...
Listing './lib/python3.5/site-packages/odict'...
Listing './lib/python3.5/site-packages/odict-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
